force-app/main/default/objects/IntegrationSetting__c/IntegrationSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Configurações das integrações</label>
</CustomObject>