force-app/main/default/objects/IntegrationSetting__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Exemplo POST, GET, PATCH</description>
    <inlineHelpText>Exemplo POST, GET, PATCH</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>