force-app/main/default/objects/IntegrationSetting__c/listViews/IntegrationLayout.listView-meta.xml
<ListView>
    <fullName>IntegrationLayout</fullName>
    <columns>NAME</columns>
    <columns>Method__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Timeout__c</columns>
    <columns>AccessToken__c</columns>
    <columns>User__c</columns>
    <columns>Password__c</columns>
    <filterScope>Everything</filterScope>
    <label>Integration Layout</label>
</ListView>